lab3/src/main/java/FPParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE=1, INTEGER=2, DOUBLE=3, BOOL=4, WORD=5, WS=6, COMMA=7, LB=8, RB=9, 
		COLON=10, DOUBLECOLON=11, SEMICOLON=12, EQ=13, STICK=14, ARROW=15, PLUS=16, 
		MINUS=17, DIV=18, MUL=19, MOD=20, OR=21, AND=22, LESS=23, GREATER=24, 
		DEQ=25;
	public static final int
		RULE_program = 0, RULE_functionOrData = 1, RULE_function = 2, RULE_head = 3, 
		RULE_body = 4, RULE_argsDefinition = 5, RULE_oneArgument = 6, RULE_callFunction = 7, 
		RULE_type = 8, RULE_data = 9, RULE_expression = 10, RULE_expr = 11, RULE_condition = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "functionOrData", "function", "head", "body", "argsDefinition", 
			"oneArgument", "callFunction", "type", "data", "expression", "expr", 
			"condition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "','", "'('", "')'", "':'", 
			"'::'", "';'", "'='", "'|'", "'->'", "'+'", "'-'", "'/'", "'*'", "'%'", 
			"'||'", "'&&'", "'<'", "'>'", "'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPE", "INTEGER", "DOUBLE", "BOOL", "WORD", "WS", "COMMA", "LB", 
			"RB", "COLON", "DOUBLECOLON", "SEMICOLON", "EQ", "STICK", "ARROW", "PLUS", 
			"MINUS", "DIV", "MUL", "MOD", "OR", "AND", "LESS", "GREATER", "DEQ"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public StringBuilder value;
		public FunctionOrDataContext fod;
		public TerminalNode EOF() { return getToken(FPParser.EOF, 0); }
		public List<FunctionOrDataContext> functionOrData() {
			return getRuleContexts(FunctionOrDataContext.class);
		}
		public FunctionOrDataContext functionOrData(int i) {
			return getRuleContext(FunctionOrDataContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FPVisitor ) return ((FPVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			     ((ProgramContext)_localctx).value =  new StringBuilder();
			     
			setState(30); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(27);
				((ProgramContext)_localctx).fod = functionOrData();
				 _localctx.value.append(((ProgramContext)_localctx).fod.value + "\n");
				}
				}
				setState(32); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 60L) != 0 );
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionOrDataContext extends ParserRuleContext {
		public StringBuilder value;
		public FunctionContext fn;
		public ExpressionContext expression;
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FunctionOrDataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionOrData; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).enterFunctionOrData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).exitFunctionOrData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FPVisitor ) return ((FPVisitor<? extends T>)visitor).visitFunctionOrData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionOrDataContext functionOrData() throws RecognitionException {
		FunctionOrDataContext _localctx = new FunctionOrDataContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionOrData);
		try {
			setState(42);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				((FunctionOrDataContext)_localctx).fn = function();

				        ((FunctionOrDataContext)_localctx).value =  ((FunctionOrDataContext)_localctx).fn.value;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				((FunctionOrDataContext)_localctx).expression = expression();

				        ((FunctionOrDataContext)_localctx).value =  new StringBuilder((((FunctionOrDataContext)_localctx).expression!=null?_input.getText(((FunctionOrDataContext)_localctx).expression.start,((FunctionOrDataContext)_localctx).expression.stop):null));
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public StringBuilder value;
		public HeadContext hd;
		public BodyContext bd;
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FPVisitor ) return ((FPVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

			        ((FunctionContext)_localctx).value =  new StringBuilder();
			    
			{
			setState(45);
			((FunctionContext)_localctx).hd = head();

			        _localctx.value.append(((FunctionContext)_localctx).hd.value);
			     
			}
			setState(51); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(48);
					((FunctionContext)_localctx).bd = body();

					        if (((FunctionContext)_localctx).hd.argTypes.size() > 1) {
					            _localctx.value.append("  ");
					            for (int i = ((FunctionContext)_localctx).hd.argTypes.size() - 1; i > 0; i--) {
					                boolean isNum = true;
					                for (int j = 0; j < ((FunctionContext)_localctx).bd.argsNames.get(i - 1).length(); j++) {
					                    if ((((FunctionContext)_localctx).bd.argsNames.get(i - 1).charAt(j) < '0' || ((FunctionContext)_localctx).bd.argsNames.get(i - 1).charAt(j) > '9') && ((FunctionContext)_localctx).bd.argsNames.get(i - 1).charAt(j) != '.') {
					                        isNum = false;
					                    }
					                }
					                boolean isBool = ((FunctionContext)_localctx).bd.argsNames.get(i - 1).equals("False") ||  ((FunctionContext)_localctx).bd.argsNames.get(i - 1).equals("True");
					                if (isNum || isBool) {
					                    ((FunctionContext)_localctx).bd.argsConiditions.set(i - 1, "a" + (((FunctionContext)_localctx).hd.argTypes.size() - i) + " == " + ((FunctionContext)_localctx).bd.argsNames.get(i - 1));
					                } else {
					                    _localctx.value.append(((FunctionContext)_localctx).hd.argTypes.get(i) + " " + ((FunctionContext)_localctx).bd.argsNames.get(i - 1) + " = a" + (((FunctionContext)_localctx).hd.argTypes.size() - i) + ";\n  ");
					                }
					            }

					            int idXE = ((FunctionContext)_localctx).bd.argsConiditions.size() - 1;
					            for (int j = ((FunctionContext)_localctx).bd.argsConiditions.size() - 1; j >= 0; j--) {
					                if (!((FunctionContext)_localctx).bd.argsConiditions.get(j).equals("true")) {
					                    idXE = j;
					                    break;
					                }
					            }
					            int idXS = 0;
					            for (int j = 0; j < ((FunctionContext)_localctx).bd.argsConiditions.size(); j++) {
					                if (!((FunctionContext)_localctx).bd.argsConiditions.get(j).equals("true")) {
					                    idXS = j;
					                    break;
					                }
					            }

					            boolean allTrue = true;
					            for (int j = 0; j < ((FunctionContext)_localctx).bd.argsConiditions.size(); j++) {
					                if (!((FunctionContext)_localctx).bd.argsConiditions.get(j).equals("true")) {
					                    allTrue = false;
					                }
					            }


					            _localctx.value.append("if (");

					            if (allTrue != true) {
					                for (int j = idXE; j >= idXS; j--) {
					                    if (!((FunctionContext)_localctx).bd.argsConiditions.get(j).equals("true"))
					                        _localctx.value.append("(" + ((FunctionContext)_localctx).bd.argsConiditions.get(j) + ")" + (j != idXS ? " && " : " )"));
					                }
					            } else {
					                _localctx.value.append("true)");
					            }

					            _localctx.value.append(" {\n    return " + ((FunctionContext)_localctx).bd.boo + ";\n  }\n}\n");
					        } else {
					            _localctx.value.append(" return " + ((FunctionContext)_localctx).bd.boo + ";\n}\n");
					        }
					    
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(53); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeadContext extends ParserRuleContext {
		public String value;
		public ArrayList<String> argTypes;
		public Token WORD;
		public TypeContext type;
		public TerminalNode WORD() { return getToken(FPParser.WORD, 0); }
		public TerminalNode DOUBLECOLON() { return getToken(FPParser.DOUBLECOLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).exitHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FPVisitor ) return ((FPVisitor<? extends T>)visitor).visitHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_head);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			((HeadContext)_localctx).WORD = match(WORD);
			setState(56);
			match(DOUBLECOLON);
			setState(57);
			((HeadContext)_localctx).type = type();

			        ((HeadContext)_localctx).argTypes =  ((HeadContext)_localctx).type.value;
			        ((HeadContext)_localctx).value =  _localctx.argTypes.get(0) + ' ' + (((HeadContext)_localctx).WORD!=null?((HeadContext)_localctx).WORD.getText():null) + "(";
			        for (int i = _localctx.argTypes.size() - 1; i >= 0; i--) {
			            if (_localctx.argTypes.size() == 1) {
			                _localctx.value += ") {\n";
			                break;
			            }
			            _localctx.value += _localctx.argTypes.get(i) + " a" + (_localctx.argTypes.size() - i) + (i == 1 ? ") {\n" : ", ");
			            if (i == 1) {
			                break;
			            }
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public String boo;
		public ArrayList<String> argsNames;
		public ArrayList<String> argsConiditions;
		public ArgsDefinitionContext ad;
		public ExpressionContext expression;
		public TerminalNode WORD() { return getToken(FPParser.WORD, 0); }
		public TerminalNode EQ() { return getToken(FPParser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArgsDefinitionContext argsDefinition() {
			return getRuleContext(ArgsDefinitionContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FPVisitor ) return ((FPVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(WORD);
			setState(61);
			((BodyContext)_localctx).ad = argsDefinition();
			setState(62);
			match(EQ);
			setState(63);
			((BodyContext)_localctx).expression = expression();

			    ((BodyContext)_localctx).boo =  (((BodyContext)_localctx).expression!=null?_input.getText(((BodyContext)_localctx).expression.start,((BodyContext)_localctx).expression.stop):null);
			    ((BodyContext)_localctx).argsNames =  ((BodyContext)_localctx).ad.argsNames;
			    ((BodyContext)_localctx).argsConiditions =  ((BodyContext)_localctx).ad.argsConiditions;

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgsDefinitionContext extends ParserRuleContext {
		public ArrayList<String> argsNames;
		public ArrayList<String> argsConiditions;
		public OneArgumentContext oneArgument;
		public ArgsDefinitionContext ad;
		public OneArgumentContext oneArgument() {
			return getRuleContext(OneArgumentContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(FPParser.COMMA, 0); }
		public ArgsDefinitionContext argsDefinition() {
			return getRuleContext(ArgsDefinitionContext.class,0);
		}
		public ArgsDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argsDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).enterArgsDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).exitArgsDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FPVisitor ) return ((FPVisitor<? extends T>)visitor).visitArgsDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsDefinitionContext argsDefinition() throws RecognitionException {
		ArgsDefinitionContext _localctx = new ArgsDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argsDefinition);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				((ArgsDefinitionContext)_localctx).oneArgument = oneArgument();
				setState(67);
				match(COMMA);
				setState(68);
				((ArgsDefinitionContext)_localctx).ad = argsDefinition();

				        ((ArgsDefinitionContext)_localctx).argsNames =  ((ArgsDefinitionContext)_localctx).ad.argsNames;
				        _localctx.argsNames.add(((ArgsDefinitionContext)_localctx).oneArgument.argName);
				        ((ArgsDefinitionContext)_localctx).argsConiditions =  ((ArgsDefinitionContext)_localctx).ad.argsConiditions;
				        if (((ArgsDefinitionContext)_localctx).oneArgument.argCondition != null)
				            _localctx.argsConiditions.add(((ArgsDefinitionContext)_localctx).oneArgument.argCondition);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				((ArgsDefinitionContext)_localctx).oneArgument = oneArgument();

				        ((ArgsDefinitionContext)_localctx).argsNames =  new ArrayList<String>();
				        _localctx.argsNames.add(((ArgsDefinitionContext)_localctx).oneArgument.argName);
				        ((ArgsDefinitionContext)_localctx).argsConiditions =  new ArrayList<String>();
				        if (((ArgsDefinitionContext)_localctx).oneArgument.argCondition != null)
				            _localctx.argsConiditions.add(((ArgsDefinitionContext)_localctx).oneArgument.argCondition);
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{

				        ((ArgsDefinitionContext)_localctx).argsNames =  null;
				        ((ArgsDefinitionContext)_localctx).argsConiditions =  null;
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OneArgumentContext extends ParserRuleContext {
		public String argName;
		public String argCondition;
		public OneArgumentContext oa;
		public Token WORD;
		public ConditionContext condition;
		public DataContext data;
		public TerminalNode LB() { return getToken(FPParser.LB, 0); }
		public TerminalNode RB() { return getToken(FPParser.RB, 0); }
		public OneArgumentContext oneArgument() {
			return getRuleContext(OneArgumentContext.class,0);
		}
		public TerminalNode WORD() { return getToken(FPParser.WORD, 0); }
		public TerminalNode STICK() { return getToken(FPParser.STICK, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public OneArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneArgument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).enterOneArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).exitOneArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FPVisitor ) return ((FPVisitor<? extends T>)visitor).visitOneArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OneArgumentContext oneArgument() throws RecognitionException {
		OneArgumentContext _localctx = new OneArgumentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_oneArgument);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(LB);
				setState(78);
				((OneArgumentContext)_localctx).oa = oneArgument();
				setState(79);
				match(RB);

				     ((OneArgumentContext)_localctx).argName =  ((OneArgumentContext)_localctx).oa.argName; ((OneArgumentContext)_localctx).argCondition =  ((OneArgumentContext)_localctx).oa.argCondition;
				     
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				((OneArgumentContext)_localctx).WORD = match(WORD);
				setState(83);
				match(STICK);
				setState(84);
				((OneArgumentContext)_localctx).condition = condition();

				     ((OneArgumentContext)_localctx).argName =  (((OneArgumentContext)_localctx).WORD!=null?((OneArgumentContext)_localctx).WORD.getText():null); ((OneArgumentContext)_localctx).argCondition =  (((OneArgumentContext)_localctx).condition!=null?_input.getText(((OneArgumentContext)_localctx).condition.start,((OneArgumentContext)_localctx).condition.stop):null);
				     
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				((OneArgumentContext)_localctx).WORD = match(WORD);

				     ((OneArgumentContext)_localctx).argName =  (((OneArgumentContext)_localctx).WORD!=null?((OneArgumentContext)_localctx).WORD.getText():null); ((OneArgumentContext)_localctx).argCondition =  "true";
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				((OneArgumentContext)_localctx).data = data();

				     ((OneArgumentContext)_localctx).argName =  (((OneArgumentContext)_localctx).data!=null?_input.getText(((OneArgumentContext)_localctx).data.start,((OneArgumentContext)_localctx).data.stop):null); ((OneArgumentContext)_localctx).argCondition =  "true";
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CallFunctionContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(FPParser.WORD, 0); }
		public TerminalNode LB() { return getToken(FPParser.LB, 0); }
		public TerminalNode RB() { return getToken(FPParser.RB, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FPParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FPParser.COMMA, i);
		}
		public CallFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).enterCallFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FPListener ) ((FPListener)listener).exitCallFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FPVisitor ) return ((FPVisitor<? extends T>)visitor).visitCallFunction(this);
			else return visitor.visitChildren(this);
		}
	}
